--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -68,3 +68,20 @@ updates:
       prefix: "composer"
     labels:
       - "tool dependency"
+
+
+  #
+  # GHA dependency track
+  #
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    open-pull-requests-limit: 5
+    schedule:
+      interval: "weekly"
+    assignees:
+      - "zerai"
+    commit-message:
+      include: "scope"
+      prefix: "github-actions"
+    labels:
+      - "GHA dependency"
