--- a/config/packages/gesdinet_jwt_refresh_token.yaml
+++ b/config/packages/gesdinet_jwt_refresh_token.yaml
@@ -1,2 +1,2 @@
-gesdinet_jwt_refresh_token:
-  ttl: 2592000 # 1 month
+xgesdinet_jwt_refresh_token:
+    refresh_token_class: App\Entity\RefreshToken
