--- a/.github/workflows/commit-stage.yaml
+++ b/.github/workflows/commit-stage.yaml
@@ -20,13 +20,20 @@ env:
 
 jobs:
   unit-test:
-    name: Unit tests
+    name: Unit tests php-${{ matrix.php }}
     runs-on: ubuntu-20.04
     timeout-minutes: 5
+    continue-on-error: ${{ matrix.is-php-experimental }}
     strategy:
       matrix:
         php:
           - '8.0'
+        is-php-experimental: [false]
+        generate-coverage-report: [true]
+        include:
+          - php: '8.1'
+            is-php-experimental: true
+            generate-coverage-report: false
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
@@ -68,20 +75,24 @@ jobs:
           --testdox-text $UNIT_TEST_DOC_FILENAME
 
       - name: Get Coverage artifact name
+        if: ${{ matrix.generate-coverage-report }}
         id: coverage-artifact-name
         run: echo "name=$COVERAGE_ARTIFATC_NAME-$GITHUB_SHA" >> $GITHUB_OUTPUT
 
       - name: Save coverage reports
+        if: ${{ matrix.generate-coverage-report }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.coverage-artifact-name.outputs.name }}
           path: ${{ env.COVERAGE_CLOVER_UNIT_FILENAME }}
 
       - name: Get Test doc artifact name
+        if: ${{ matrix.generate-coverage-report }}
         id: test-doc-artifact-name
         run: echo "name=$UNIT_TEST_DOC_ARTIFATC_NAME-$GITHUB_SHA" >> $GITHUB_OUTPUT
 
       - name: Save test doc reports
+        if: ${{ matrix.generate-coverage-report }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.test-doc-artifact-name.outputs.name }}
