--- a/.github/workflows/commit-stage.yaml
+++ b/.github/workflows/commit-stage.yaml
@@ -9,20 +9,22 @@ on:
         type: string
 
 env:
+  # GHA SETTINGS
   USE_COMPOSER_CACHE: '1'
   USE_PHP_EXTENSION_CACHE: '1'
+  # PHP SETTINGS
   PHP_EXTENSIONS: ctype, iconv, json, curl, gd, intl, opcache, openssl, mbstring, mysql, pdo_sqlite
   PHP_EXTENSIONS_CACHE_KEY: cache-php-extensions-v1
-  COVERAGE_ARTIFATC_NAME: 'Coverage-reports-on-SHA'
-  COVERAGE_CLOVER_UNIT_FILENAME: 'coverage-unit-test-clover.xml'
-  UNIT_TEST_DOC_ARTIFATC_NAME: 'Docs-unit-test-on-SHA'
+  # ARTIFACTS SETTINGS
+  ARTIFATC_NAME_FOR_UNIT_TESTS_COVERAGE: 'Unit-test-coverage-reports-on-SHA'
+  UNIT_TEST_CLOVER_FILENAME: 'coverage-unit-test-clover.xml'
+  ARTIFATC_NAME_FOR_UNIT_TESTS_DOCUMENTATION_REPORT: 'Unit-test-docs-report-on-SHA'
   UNIT_TEST_DOC_FILENAME: 'doc-unit-test.txt'
-
 
 
 jobs:
   unit-test:
-    name: Unit tests php-${{ matrix.php }}
+    name: Unit tests (php-${{ matrix.php }})
     runs-on: ubuntu-20.04
     timeout-minutes: 5
     continue-on-error: ${{ matrix.is-php-experimental }}
@@ -90,25 +92,25 @@ jobs:
       - name: Run unit tests
         run: |
           vendor/bin/phpunit --testsuite=unit --testdox --no-interaction --colors=always \
-          --coverage-clover $COVERAGE_CLOVER_UNIT_FILENAME \
+          --coverage-clover $UNIT_TEST_CLOVER_FILENAME \
           --testdox-text $UNIT_TEST_DOC_FILENAME
 
       - name: Get Coverage artifact name
         if: ${{ matrix.generate-coverage-report }}
         id: coverage-artifact-name
-        run: echo "name=$COVERAGE_ARTIFATC_NAME-$GITHUB_SHA" >> $GITHUB_OUTPUT
+        run: echo "name=$ARTIFATC_NAME_FOR_UNIT_TESTS_COVERAGE-$GITHUB_SHA" >> $GITHUB_OUTPUT
 
       - name: Save coverage reports
         if: ${{ matrix.generate-coverage-report }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.coverage-artifact-name.outputs.name }}
-          path: ${{ env.COVERAGE_CLOVER_UNIT_FILENAME }}
+          path: ${{ env.UNIT_TEST_CLOVER_FILENAME }}
 
       - name: Get Test doc artifact name
         if: ${{ matrix.generate-coverage-report }}
         id: test-doc-artifact-name
-        run: echo "name=$UNIT_TEST_DOC_ARTIFATC_NAME-$GITHUB_SHA" >> $GITHUB_OUTPUT
+        run: echo "name=$ARTIFATC_NAME_FOR_UNIT_TESTS_DOCUMENTATION_REPORT-$GITHUB_SHA" >> $GITHUB_OUTPUT
 
       - name: Save test doc reports
         if: ${{ matrix.generate-coverage-report }}
