--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,51 +2,40 @@ version: '3.8'
 
 services:
   app:
-    image: webdevops/php-dev:8.0
+    build:
+      context: .
+      target: php_dev
     ports:
-      - "2222:22"
-      - "9021:9021"
+      - "9000:9000"
+    depends_on:
+      - database
     volumes:
-      - "./:/app"
-    environment:
-      WEB_DOCUMENT_ROOT: /app/public
-      WEB_DOCUMENT_INDEX: index.php
-      PHP_DEBUGGER: xdebug
-      XDEBUG_MODE: coverage
-      XDEBUG_REMOTE_AUTOSTART: 1
-      XDEBUG_REMOTE_CONNECT_BACK: 1
-      # IMPORTANT: please change this ip address to your docker host ip. Get your docker host ip:
-      # docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' docker_php_1
-      #- XDEBUG_REMOTE_HOST=172.19.0.1
-      XDEBUG_REMOTE_PORT: 9021
+      - .:/app
 
-  web:
-    image: webdevops/nginx:alpine
+  nginx:
+    image: nginx:1.22-alpine
     ports:
       - "80:80"
     depends_on:
       - app
     volumes:
-      - "./:/app"
-    environment:
-      WEB_DOCUMENT_ROOT: /app/public
-      WEB_DOCUMENT_INDEX: index.php
-      WEB_PHP_SOCKET: app:9000
+      - ./:/app
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
 
 
+###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-13}-alpine
-    ports:
-      - "5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-db-name}
+      POSTGRES_DB: ${POSTGRES_DB:-app}
       # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-db-password}
-      POSTGRES_USER: ${POSTGRES_USER:-db-user}
-      # volumes:
-      # - db-data:/var/lib/postgresql/data:rw
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
+      POSTGRES_USER: ${POSTGRES_USER:-app}
+    volumes:
+      - db-data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
+###< doctrine/doctrine-bundle ###
 
 
   database-test:
@@ -74,3 +63,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: "admin@example.com"
       PGADMIN_DEFAULT_PASSWORD: "admin"
+
+
+volumes:
+###> doctrine/doctrine-bundle ###
+  db-data:
+###< doctrine/doctrine-bundle ###
