--- a/.env.test
+++ b/.env.test
@@ -6,7 +6,10 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://app-test:password-test@database-test:5432/app?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
 ###> ecotone/symfony-bundle ###
-# DATABASE_DSN="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_DSN="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_DSN="postgresql://app-test:password-test@database-test:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
