--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -7,5 +7,5 @@ kernel:
   type: annotation
 
 iam_api_controllers:
-  resource: ../../srcIam/src/Adapter/Api/
+  resource: ../../_iam/src/Adapter/Api/
   type: annotation
