--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,8 +7,8 @@ parameters:
     paths:
         - src/
         - tests/
-        - srcIam/src/
-        - srcIam/tests/
+        - _iam/src/
+        - _iam/tests/
 
 
     checkMissingIterableValueType: false
@@ -20,6 +20,6 @@ parameters:
 
     excludePaths:
         - tests/bootstrap.php
-        - srcIam/src/Adapter/Api/Auth/LogoutController.php
+        - _iam/src/Adapter/Api/Auth/LogoutController.php
 
     tmpDir: var/tools/phpstan/
