--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,7 +23,7 @@
         </testsuite>
         <testsuite name="unit">
             <directory>tests/Unit</directory>
-            <directory>srcIam/tests/Unit</directory>
+            <directory>_iam/tests/Unit</directory>
         </testsuite>
         <testsuite name="integration">
             <directory>tests/Integration</directory>
@@ -36,7 +36,7 @@
     <coverage processUncoveredFiles="true">
         <include>
             <directory suffix=".php">src</directory>
-            <directory suffix=".php">srcIam/src</directory>
+            <directory suffix=".php">_iam/src</directory>
         </include>
     </coverage>
 
