[tools] tools config for hiring module.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,7 +9,8 @@ parameters:
         - tests/
         - _iam/src/
         - _iam/tests/
-
+        - _hiring/src/
+        - _hiring/tests/
 
     checkMissingIterableValueType: false
 
