--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,6 +24,7 @@
         <testsuite name="unit">
             <directory>tests/Unit</directory>
             <directory>_iam/tests/Unit</directory>
+            <directory>_hiring/tests/Unit</directory>
         </testsuite>
         <testsuite name="integration">
             <directory>tests/Integration</directory>
@@ -37,6 +38,7 @@
         <include>
             <directory suffix=".php">src</directory>
             <directory suffix=".php">_iam/src</directory>
+            <directory suffix=".php">_hiring/src</directory>
         </include>
     </coverage>
 
