--- a/config/packages/ecotone.yaml
+++ b/config/packages/ecotone.yaml
@@ -2,6 +2,7 @@ ecotone:
   loadSrcNamespaces: true
   namespaces:
     - 'IdentityAccess'
+    - 'Hiring'
   failFast: true
   defaultConnectionExceptionRetry:
     initialDelay: 100 #int (default: 100, production: 1000)
