--- a/.github/workflows/commit-stage.yaml
+++ b/.github/workflows/commit-stage.yaml
@@ -36,8 +36,12 @@ jobs:
         generate-coverage-report: [true]
         include:
           - php: '8.1'
+            is-php-experimental: false
+            generate-coverage-report: false
+          - php: '8.2'
             is-php-experimental: true
             generate-coverage-report: false
+
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
@@ -128,6 +132,7 @@ jobs:
       matrix:
         php:
           - '8.0'
+          - '8.1'
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
@@ -182,6 +187,7 @@ jobs:
       matrix:
         php:
           - '8.0'
+          - '8.1'
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
@@ -251,6 +257,7 @@ jobs:
       matrix:
         php:
           - '8.0'
+          - '8.1'
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
@@ -315,6 +322,7 @@ jobs:
       matrix:
         php:
           - '8.0'
+          - '8.1'
       fail-fast: true
     steps:
       - name: Checkout on SHA-${{ inputs.triggering-sha }}
