--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,7 +19,8 @@ updates:
       - "php dependency"
     ignore:
       - dependency-name: "symfony/*"
-        versions: ["6.x"]
+        versions: ["6.x", "7.x"]
+
 
   #
   # Tools dependency track
