--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,9 @@ updates:
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
+      day: "sunday"
+      time: "01:00"
+      timezone: "Europe/Rome"
     assignees:
       - "zerai"
     commit-message:
@@ -17,9 +20,72 @@ updates:
       prefix: "composer"
     labels:
       - "php dependency"
+    groups:
+      symfony_dev:
+        applies-to: "version-updates"
+        dependency-type: "development"
+        patterns:
+          - "symfony/stopwatch"
+          - "symfony/browser-kit"
+          - "symfony/debug-bundle"
+          - "symfony/css-selector"
+          - "symfony/phpunit-bridge"
+          - "symfony/web-profiler-bundle"
+        update-types:
+          - "patch"
+      symfony_prod:
+        applies-to: "version-updates"
+        dependency-type: "production"
+        patterns:
+          - "symfony/*"
+        update-types:
+          #- "minor"
+          - "patch"
+      doctrine:
+        applies-to: "version-updates"
+        dependency-type: "production"
+        patterns:
+          - "doctrine/*"
+        update-types:
+          #- "minor"
+          - "patch"
+      ecotone:
+        applies-to: "version-updates"
+        dependency-type: "production"
+        patterns:
+          - "ecotone/*"
+        update-types:
+          - "minor"
+          - "patch"
+      pagerfanta:
+        applies-to: "version-updates"
+        dependency-type: "production"
+        patterns:
+          - "babdev/pagerfanta-bundle"
+          - "pagerfanta/*"
+        update-types:
+          - "minor"
+          - "patch"
+      twig-extra:
+        applies-to: "version-updates"
+        dependency-type: "production"
+        patterns:
+          - "twig/extra-bundle"
+          - "twig/*-extra"
+        update-types:
+          - "minor"
+          - "patch"
     ignore:
       - dependency-name: "symfony/*"
-        versions: ["6.x", "7.x"]
+        update-types: ["version-update:semver-major", "version-update:semver-minor" ]
+      - dependency-name: "doctrine/*"
+        update-types: ["version-update:semver-major", "version-update:semver-minor" ]
+      - dependency-name: "ecotone/*"
+        update-types: [ "version-update:semver-major" ]
+      - dependency-name: "knpuniversity/oauth2-client-bundle"
+        update-types: ["version-update:semver-major", "version-update:semver-minor"]
+      - dependency-name: "twig/*-extra"
+        update-types: ["version-update:semver-major"]
 
 
   #
